add route isConnected and check when user connected so not allow go to login page
